Display all device categories in editor

--- a/index.html
+++ b/index.html
@@ -603,83 +603,7 @@
     <textarea id="exportOutput" class="hidden" readonly></textarea>
 
     <h3 id="existingDevicesHeading">Existing Devices</h3>
-    <div class="device-list-container">
-      <div class="device-category">
-        <h4 id="category_cameras">Cameras</h4>
-        <input type="search" id="cameraListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="cameraList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_viewfinders">Viewfinders</h4>
-        <input type="search" id="viewfinderListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="viewfinderList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_monitors">Monitors</h4>
-        <input type="search" id="monitorListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="monitorList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_video">Wireless Transmitter</h4>
-        <input type="search" id="videoListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="videoList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_wirelessReceivers">Wireless Receivers</h4>
-        <input type="search" id="wirelessReceiverListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="wirelessReceiverList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_fiz_motors">FIZ Motors</h4>
-        <input type="search" id="motorListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="motorList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_fiz_controllers">FIZ Controllers</h4>
-        <input type="search" id="controllerListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="controllerList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_fiz_distance">FIZ Distance</h4>
-        <input type="search" id="distanceListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="distanceList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_batteries">Batteries</h4>
-        <input type="search" id="batteryListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="batteryList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_batteryHotswaps">Battery Hotswaps</h4>
-        <input type="search" id="batteryHotswapListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="batteryHotswapList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_accessory_batteries">Accessory Batteries</h4>
-        <input type="search" id="accessoryBatteryListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="accessoryBatteryList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_cables">Cables</h4>
-        <input type="search" id="cableListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="cableList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_cages">Cages</h4>
-        <input type="search" id="cageListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="cageList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_camera_support">Camera Support</h4>
-        <input type="search" id="cameraSupportListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="cameraSupportList" class="device-ul"></ul>
-      </div>
-      <div class="device-category">
-        <h4 id="category_chargers">Chargers</h4>
-        <input type="search" id="chargerListFilter" class="list-filter" placeholder="Filter..." aria-label="Filter" inputmode="search" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-        <ul id="chargerList" class="device-ul"></ul>
-      </div>
-    </div>
+    <div id="deviceListContainer" class="device-list-container"></div>
   </section>
   </main>
 
