Align crew form layout with other project fields

--- a/index.html
+++ b/index.html
@@ -2008,7 +2008,8 @@
       </div>
       <h3 id="crewHeading">Crew</h3>
       <div class="form-row" id="crewListRow">
-        <div id="crewContainer"></div>
+        <label id="crewLabel">Crew:</label>
+        <div id="crewContainer" aria-labelledby="crewLabel"></div>
         <button type="button" id="addPersonBtn">+</button>
       </div>
       <div class="form-row" id="prepListRow">
