Add disk icons to save actions

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="form-row">
       <label for="setupName" id="setupNameLabel">Project Name:</label>
       <input type="text" id="setupName" placeholder="Project name" aria-labelledby="setupNameLabel" />
-      <button id="saveSetupBtn">Save</button>
+      <button id="saveSetupBtn"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE825;</span>Save</button>
     </div>
     <div class="form-row form-row-actions" role="group" aria-label="Project actions">
       <span class="form-label-spacer" aria-hidden="true"></span>
@@ -746,7 +746,7 @@
             </div>
           </div>
           <div class="button-row">
-            <button type="button" id="autoGearSaveRule">Save rule</button>
+            <button type="button" id="autoGearSaveRule"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE825;</span>Save rule</button>
             <button type="button" id="autoGearCancelEdit">Cancel</button>
           </div>
         </div>
@@ -789,7 +789,7 @@
         <p><a href="https://github.com" id="supportLink" target="_blank">Support</a></p>
       </section>
       <div class="button-row action-buttons">
-        <button id="settingsSave">Save</button>
+        <button id="settingsSave"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE825;</span>Save</button>
         <button id="settingsCancel">Cancel</button>
       </div>
     </div>
