Add share icons to share project button

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="form-row form-row-actions" role="group" aria-label="Project actions">
       <span class="form-label-spacer" aria-hidden="true"></span>
       <div class="form-actions">
-        <button id="shareSetupBtn">Share Project</button>
+        <button id="shareSetupBtn"><span class="btn-icon icon-glyph" aria-hidden="true">&#xF046;</span>Share Project</button>
       </div>
     </div>
     <p id="shareLinkMessage" class="hidden" role="status" aria-live="polite"></p>
