Add load icon to shared project load button

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="form-row" id="sharedLinkRow">
       <label for="sharedLinkInput" id="sharedLinkLabel">Shared Project:</label>
       <input type="file" id="sharedLinkInput" accept=".json" aria-labelledby="sharedLinkLabel" />
-      <button id="applySharedLinkBtn">Load</button>
+      <button id="applySharedLinkBtn"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE7B3;</span>Load</button>
     </div>
     <div class="form-row form-row-actions">
       <span class="form-label-spacer" aria-hidden="true"></span>
