Improve factory reset for auto gear rules

--- a/index.html
+++ b/index.html
@@ -673,7 +673,10 @@
         <h3 id="autoGearHeading">Automatic Gear Rules</h3>
         <p id="autoGearDescription" class="settings-hint"></p>
         <div id="autoGearRulesList" class="auto-gear-rules" aria-live="polite"></div>
-        <button type="button" id="autoGearAddRule">Add rule</button>
+        <div class="auto-gear-actions">
+          <button type="button" id="autoGearAddRule">Add rule</button>
+          <button type="button" id="autoGearResetFactory">Reset to factory additions</button>
+        </div>
         <div id="autoGearEditor" class="auto-gear-editor" hidden>
           <div class="form-row">
             <label for="autoGearRuleName" id="autoGearRuleNameLabel">Rule name</label>
