Add icon to clear current project button

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     </div>
     <div class="form-row form-row-actions">
       <span class="form-label-spacer" aria-hidden="true"></span>
-      <button id="clearSetupBtn">Clear Current Project</button>
+      <button id="clearSetupBtn"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE453;</span>Clear Current Project</button>
     </div>
     <div class="form-row form-row-actions" role="group" aria-label="Project exports">
       <span class="form-label-spacer" aria-hidden="true"></span>
