--- a/index.html
+++ b/index.html
@@ -761,8 +761,8 @@
             <input type="text" id="autoGearRuleName" />
           </div>
           <div class="form-row">
-            <label for="autoGearScenarios" id="autoGearScenariosLabel">Required scenario</label>
-            <select id="autoGearScenarios"></select>
+            <label for="autoGearScenarios" id="autoGearScenariosLabel">Required scenarios</label>
+            <select id="autoGearScenarios" class="auto-gear-scenarios" multiple></select>
           </div>
           <div class="auto-gear-editor-columns">
             <div class="auto-gear-column">
