Update hard reload icon

--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
       <button id="reloadButton" title="Force reload" aria-label="Force reload">
         <span class="icon-glyph icon-svg" aria-hidden="true">
           <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <path
-              d="M16.023 9.348h4.992m0-.002V4.356m0 4.99-3.18-3.181c-.99-.992-2.247-1.745-3.699-2.134-4.401-1.179-8.925 1.433-10.104 5.834"
+            <polyline
+              points="23 4 23 10 17 10"
               stroke="currentColor"
               stroke-width="1.5"
               stroke-linecap="round"
               stroke-linejoin="round"
             />
             <path
-              d="M2.984 19.644v-4.992h4.993m0 0L4.5 15l-3 3m6.477-3.348c.99.992 2.247 1.745 3.699 2.134 4.401 1.179 8.925-1.433 10.104-5.834"
+              d="M20.49 15a9 9 0 1 1-2.12-9.36L23 10"
               stroke="currentColor"
               stroke-width="1.5"
               stroke-linecap="round"
