Add auto gear factory reset control

--- a/index.html
+++ b/index.html
@@ -755,6 +755,7 @@
         <p id="autoGearDescription" class="settings-hint"></p>
         <div id="autoGearRulesList" class="auto-gear-rules" aria-live="polite"></div>
         <button type="button" id="autoGearAddRule">Add rule</button>
+        <button type="button" id="autoGearResetFactory">Reset to factory additions</button>
         <div id="autoGearEditor" class="auto-gear-editor" hidden>
           <div class="form-row">
             <label for="autoGearRuleName" id="autoGearRuleNameLabel">Rule name</label>
