--- a/index.html
+++ b/index.html
@@ -91,7 +91,22 @@
         <span class="icon-glyph" aria-hidden="true">&#xEC7E;</span>
       </button>
       <button id="pinkModeToggle" title="Toggle pink mode" aria-label="Toggle pink mode" aria-pressed="false">
-        <span class="icon-glyph" aria-hidden="true">&#xF38D;</span>
+        <span class="icon-glyph icon-svg pink-mode-icon" aria-hidden="true">
+          <svg
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="1.6"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            aria-hidden="true"
+          >
+            <path d="M5.6 11.3 8.8 6.3a1 1 0 0 1 1.1-.4l2.9 1a1 1 0 0 1 .5.4l2.5 3.5v2.8l-1.6 2.6V20H9.3v-3.2L6.5 14l-.9-1Z" />
+            <path d="M8.8 9.9 6.4 9.1" />
+            <path d="M12.4 13.2c.9.1 1.6.6 2 1.3" />
+            <circle cx="14.6" cy="10.7" r=".55" />
+          </svg>
+        </span>
       </button>
       <button id="settingsButton" aria-label="Settings" aria-haspopup="dialog" aria-controls="settingsDialog" title="Settings">
         <span class="icon-glyph icon-svg" aria-hidden="true">
@@ -1736,11 +1751,29 @@
         <section
           data-help-section
           id="pinkModeHelp"
-          data-help-keywords="pink mode unicorn accent theme playful colour color toggle p key"
+          data-help-keywords="pink mode horse unicorn accent theme playful colour color toggle p key"
         >
-          <h3><span class="help-icon icon-glyph" aria-hidden="true">&#xF38D;</span>Pink Mode</h3>
+          <h3>
+            <span class="help-icon icon-glyph icon-svg pink-mode-icon" aria-hidden="true">
+              <svg
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="1.6"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                aria-hidden="true"
+              >
+                <path d="M5.6 11.3 8.8 6.3a1 1 0 0 1 1.1-.4l2.9 1a1 1 0 0 1 .5.4l2.5 3.5v2.8l-1.6 2.6V20H9.3v-3.2L6.5 14l-.9-1Z" />
+                <path d="M8.8 9.9 6.4 9.1" />
+                <path d="M12.4 13.2c.9.1 1.6.6 2 1.3" />
+                <circle cx="14.6" cy="10.7" r=".55" />
+              </svg>
+            </span>
+            Pink Mode
+          </h3>
           <ul>
-            <li>Click the horse button for a pink unicorn theme that accents buttons and headings.</li>
+            <li>Click the horse button (it turns into a unicorn when pink mode is active) for a playful pink accent theme.</li>
             <li>The setting persists between visits and works in light or dark mode.</li>
             <li>Press <kbd>P</kbd> to toggle pink mode.</li>
           </ul>
