Add icons to generate overview and gear list buttons

--- a/index.html
+++ b/index.html
@@ -217,8 +217,12 @@
     <div class="form-row form-row-actions" role="group" aria-label="Project exports">
       <span class="form-label-spacer" aria-hidden="true"></span>
       <div class="form-actions">
-        <button id="generateOverviewBtn">Generate Overview</button>
-        <button id="generateGearListBtn" type="button">Generate Gear List and Project Requirements</button>
+        <button id="generateOverviewBtn">
+          <span class="btn-icon icon-glyph" aria-hidden="true">&#xECF6;</span>Generate Overview
+        </button>
+        <button id="generateGearListBtn" type="button">
+          <span class="btn-icon icon-glyph" aria-hidden="true">&#xE8AF;</span>Generate Gear List and Project Requirements
+        </button>
       </div>
     </div>
   </section>
