--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
             stroke-linejoin="round"
             aria-hidden="true"
           >
-            <path d="M5.6 11.3 8.8 6.3a1 1 0 0 1 1.1-.4l2.9 1a1 1 0 0 1 .5.4l2.5 3.5v2.8l-1.6 2.6V20H9.3v-3.2L6.5 14l-.9-1Z" />
-            <path d="M8.8 9.9 6.4 9.1" />
-            <path d="M12.4 13.2c.9.1 1.6.6 2 1.3" />
-            <circle cx="14.6" cy="10.7" r=".55" />
+            <path d="M5.5 11.3 8.9 6.1a1 1 0 0 1 1.1-.3l2.8.9a1 1 0 0 1 .5.4l2.5 3.5v2.9l-1.6 2.5V20H9.4v-3.2L6.5 14l-.9-1Z" />
+            <path d="M11.9 6.8 15.2 4.1 15.5 5.8" />
+            <path d="M9 8.1 6.5 7.1" />
+            <path d="M12.4 13.3c.9.1 1.6.6 2 1.3" />
+            <circle cx="14.6" cy="10.6" r=".55" />
           </svg>
         </span>
       </button>
@@ -1751,7 +1752,7 @@
         <section
           data-help-section
           id="pinkModeHelp"
-          data-help-keywords="pink mode horse unicorn accent theme playful colour color toggle p key"
+          data-help-keywords="pink mode unicorn accent theme playful sparkle colour color toggle p key"
         >
           <h3>
             <span class="help-icon icon-glyph icon-svg pink-mode-icon" aria-hidden="true">
@@ -1764,16 +1765,17 @@
                 stroke-linejoin="round"
                 aria-hidden="true"
               >
-                <path d="M5.6 11.3 8.8 6.3a1 1 0 0 1 1.1-.4l2.9 1a1 1 0 0 1 .5.4l2.5 3.5v2.8l-1.6 2.6V20H9.3v-3.2L6.5 14l-.9-1Z" />
-                <path d="M8.8 9.9 6.4 9.1" />
-                <path d="M12.4 13.2c.9.1 1.6.6 2 1.3" />
-                <circle cx="14.6" cy="10.7" r=".55" />
+                <path d="M5.5 11.3 8.9 6.1a1 1 0 0 1 1.1-.3l2.8.9a1 1 0 0 1 .5.4l2.5 3.5v2.9l-1.6 2.5V20H9.4v-3.2L6.5 14l-.9-1Z" />
+                <path d="M11.9 6.8 15.2 4.1 15.5 5.8" />
+                <path d="M9 8.1 6.5 7.1" />
+                <path d="M12.4 13.3c.9.1 1.6.6 2 1.3" />
+                <circle cx="14.6" cy="10.6" r=".55" />
               </svg>
             </span>
             Pink Mode
           </h3>
           <ul>
-            <li>Click the horse button (it turns into a unicorn when pink mode is active) for a playful pink accent theme.</li>
+            <li>Click the unicorn button (it sparkles when pink mode is active) for a playful pink accent theme.</li>
             <li>The setting persists between visits and works in light or dark mode.</li>
             <li>Press <kbd>P</kbd> to toggle pink mode.</li>
           </ul>
