Add pink mode toggle to settings

--- a/index.html
+++ b/index.html
@@ -713,6 +713,10 @@
           <input type="checkbox" id="settingsDarkMode" />
         </div>
         <div class="form-row">
+          <label for="settingsPinkMode" id="settingsPinkModeLabel">Pink mode</label>
+          <input type="checkbox" id="settingsPinkMode" />
+        </div>
+        <div class="form-row">
           <label for="accentColorInput" id="accentColorLabel">Accent color</label>
           <input type="color" id="accentColorInput" value="#001589" />
         </div>
