Add icons to cancel buttons

--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
       </div>
     </div>
     <button id="addDeviceBtn">Add</button>
-    <button id="cancelEditBtn" class="hidden">Cancel</button>
+    <button id="cancelEditBtn" class="hidden"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE453;</span>Cancel</button>
       <button id="exportDataBtn">Export Database</button>
       <button id="importDataBtn">Import Database</button>
       <input type="file" id="importFileInput" accept=".json" class="hidden" />
@@ -855,7 +855,7 @@
           </div>
           <div class="button-row">
             <button type="button" id="autoGearSaveRule"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE825;</span>Save rule</button>
-            <button type="button" id="autoGearCancelEdit">Cancel</button>
+            <button type="button" id="autoGearCancelEdit"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE453;</span>Cancel</button>
           </div>
         </div>
         <datalist id="autoGearItemCatalog"></datalist>
@@ -898,7 +898,7 @@
       </section>
       <div class="button-row action-buttons">
         <button id="settingsSave"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE825;</span>Save</button>
-        <button id="settingsCancel">Cancel</button>
+        <button id="settingsCancel"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE453;</span>Cancel</button>
       </div>
     </div>
   </div>
@@ -2514,7 +2514,7 @@
         </div>
       </div>
       <menu>
-        <button type="reset" id="projectCancel">Cancel</button>
+        <button type="reset" id="projectCancel"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE453;</span>Cancel</button>
         <button type="submit" id="projectSubmit">OK</button>
       </menu>
     </form>
@@ -2570,7 +2570,7 @@
 
       <div class="form-row button-row">
         <button type="submit" id="fbSubmit">Save &amp; Submit</button>
-        <button type="button" id="fbCancel">Cancel</button>
+        <button type="button" id="fbCancel"><span class="btn-icon icon-glyph" aria-hidden="true">&#xE453;</span>Cancel</button>
       </div>
     </form>
 
