Enable local font uploads and persistence

--- a/index.html
+++ b/index.html
@@ -778,6 +778,14 @@
           <button type="button" id="localFontsButton" class="inline-form-button" hidden>
             Add local font…
           </button>
+          <input
+            type="file"
+            id="localFontsInput"
+            class="visually-hidden"
+            accept=".woff2,.woff,.ttf,.otf,.ttc,application/font-woff,application/font-woff2,application/x-font-ttf,application/x-font-opentype,font/ttf,font/otf,font/woff,font/woff2"
+            multiple
+            hidden
+          />
           <p id="localFontsStatus" class="settings-hint" role="status" aria-live="polite" hidden></p>
         </div>
         <div class="form-row">
