--- a/index.html
+++ b/index.html
@@ -2645,6 +2645,7 @@
   <script src="storage.js"></script>
   <script src="translations.js"></script>
   <script src="lz-string.min.js"></script>
+  <script src="vendor/lottie-light.min.js"></script>
   <script src="script.js"></script>
   <script src="overview.js"></script>
 </body>
