Align FAQ icon with help toggle

--- a/index.html
+++ b/index.html
@@ -1835,7 +1835,9 @@
           id="faq"
           data-help-keywords="faq questions answers troubleshooting tips"
         >
-          <h3><span class="help-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xEEFB;</span>FAQ</h3>
+          <h3>
+            <span class="help-icon icon-glyph icon-text" aria-hidden="true" data-icon-font="uicons">?</span>FAQ
+          </h3>
           <details
             class="faq-item"
             data-help-keywords="save project saved projects ctrl+s enter autosave rename update"
