Fix font size label typo

--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
             <option value="14">14px</option>
             <option value="16">16px</option>
             <option value="18">18px</option>
-            <option value="20">20px (Bitter)</option>
+            <option value="20">20px (Bigger)</option>
           </select>
         </div>
         <div class="form-row">
