Update load project button label

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="form-actions">
         <button id="shareSetupBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF219;</span>Share Project</button>
         <div id="sharedLinkRow" class="share-import-group">
-          <label for="applySharedLinkBtn" id="sharedLinkLabel">Shared Project:</label>
+          <label for="applySharedLinkBtn" id="sharedLinkLabel" class="visually-hidden">Project file</label>
           <input
             type="file"
             id="sharedLinkInput"
@@ -249,7 +249,7 @@
                 />
               </svg>
             </span>
-            Load
+            Load Project
           </button>
         </div>
         <button id="clearSetupBtn"><span class="btn-icon icon-glyph" aria-hidden="true" data-icon-font="essential">&#xF131;</span>Clear Current Project</button>
