Update load project button icon

--- a/index.html
+++ b/index.html
@@ -211,8 +211,11 @@
           <button id="applySharedLinkBtn">
             <span class="btn-icon icon-glyph icon-svg" aria-hidden="true">
               <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                <path
-                  d="M12 3v9.75"
+                <line
+                  x1="12"
+                  y1="6.75"
+                  x2="12"
+                  y2="16.25"
                   fill="none"
                   stroke="currentColor"
                   stroke-width="1.5"
@@ -220,7 +223,7 @@
                   stroke-linejoin="round"
                 />
                 <polyline
-                  points="8.75 9.75 12 12.75 15.25 9.75"
+                  points="8.75 10.25 12 6.75 15.25 10.25"
                   fill="none"
                   stroke="currentColor"
                   stroke-width="1.5"
@@ -228,7 +231,7 @@
                   stroke-linejoin="round"
                 />
                 <path
-                  d="M4.75 11.5H8.6L10.4 9h8.85L21 11.5"
+                  d="M4.75 14.5H8.6L10.4 17h8.85L21 14.5"
                   fill="none"
                   stroke="currentColor"
                   stroke-width="1.5"
