refactor: reorganize static resources under web

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <meta name="referrer" content="no-referrer" />
   <meta name="color-scheme" content="light dark" />
   <title>Cine Power Planner</title>
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="assets/css/overview-print.css" media="print" />
+  <link rel="stylesheet" href="web/styles/style.css" />
+  <link rel="stylesheet" href="web/styles/overview-print.css" media="print" />
   <link rel="icon" href="icon.svg" type="image/svg+xml" />
   <link rel="icon" href="icon.png" type="image/png" />
   <link rel="apple-touch-icon" href="icon.png" />
@@ -2879,22 +2879,22 @@
     </datalist>
   </dialog>
   <dialog id="overviewDialog"></dialog>
-  <script src="assets/js/globalthis-polyfill.js"></script>
-  <script src="assets/data/devices/index.js"></script>
-  <script src="assets/data/devices/cameras.js"></script>
-  <script src="assets/data/devices/monitors.js"></script>
-  <script src="assets/data/devices/video.js"></script>
-  <script src="assets/data/devices/fiz.js"></script>
-  <script src="assets/data/devices/batteries.js"></script>
-  <script src="assets/data/devices/batteryHotswaps.js"></script>
-  <script src="assets/data/devices/cages.js"></script>
-  <script src="assets/data/devices/gearList.js"></script>
-  <script src="assets/data/devices/wirelessReceivers.js"></script>
-  <script src="assets/js/storage.js"></script>
-  <script src="assets/js/translations.js"></script>
-  <script src="assets/vendor/lz-string.min.js"></script>
-  <script src="assets/vendor/lottie-light.min.js"></script>
-  <script src="assets/js/script.js"></script>
-  <script src="assets/js/overview.js"></script>
+  <script src="web/scripts/globalthis-polyfill.js"></script>
+  <script src="web/data/devices/index.js"></script>
+  <script src="web/data/devices/cameras.js"></script>
+  <script src="web/data/devices/monitors.js"></script>
+  <script src="web/data/devices/video.js"></script>
+  <script src="web/data/devices/fiz.js"></script>
+  <script src="web/data/devices/batteries.js"></script>
+  <script src="web/data/devices/batteryHotswaps.js"></script>
+  <script src="web/data/devices/cages.js"></script>
+  <script src="web/data/devices/gearList.js"></script>
+  <script src="web/data/devices/wirelessReceivers.js"></script>
+  <script src="web/scripts/storage.js"></script>
+  <script src="web/scripts/translations.js"></script>
+  <script src="web/vendor/lz-string.min.js"></script>
+  <script src="web/vendor/lottie-light.min.js"></script>
+  <script src="web/scripts/script.js"></script>
+  <script src="web/scripts/overview.js"></script>
 </body>
 </html>
