--- a/legal/datenschutz-en.html
+++ b/legal/datenschutz-en.html
@@ -11,8 +11,8 @@
   <link rel="icon" href="../icon.svg" type="image/svg+xml" />
   <link rel="icon" href="../icon.png" type="image/png" />
   <link rel="apple-touch-icon" href="../icon.png" />
-  <link rel="stylesheet" href="../assets/css/style.css" />
-  <script src="../assets/js/static-theme.js" defer></script>
+  <link rel="stylesheet" href="../web/styles/style.css" />
+  <script src="../web/scripts/static-theme.js" defer></script>
 </head>
 <body class="static-page">
   <a href="#mainContent" class="skip-link">Skip to content</a>
